# minesweeper

./: Readme.md  Readme.org  flake.nix  minesweeper.cabal
app/: Main.hs
src/: Board.hs
test/: Spec.hs
