cabal-version:      3.4
name:               minesweeper
version:            0.1.0.0
synopsis:
  Minesweeper, https://github.com/effectfully-ou/sketches/tree/f03d7a04c7132407a6e916ab33965ba27d96df1a/mineunifier

description:
  Please see the README at <https://github.com/dschrempf/minesweeper#readme>

category:           Math, Statistics
homepage:           https://github.com/dschrempf/minesweeper#readme
bug-reports:        https://github.com/dschrempf/minesweeper/issues
author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com
copyright:          2022 Dominik Schrempf
license:            GPL-3.0-or-later
license-file:       License.txt
build-type:         Simple
extra-doc-files:
  Changelog.md
  Readme.md

extra-source-files:
data-files:

source-repository head
  location: https://github.com/dschrempf/minesweeper
  type:     git

common common
  default-extensions:

common lib
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common test
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common bench
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common exec
  default-language: Haskell2010
  ghc-options:
    -Wall -Wunused-packages -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

library
  import:          common, lib
  exposed-modules: Board
  hs-source-dirs:  src
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , base      >=4.7 && <5
    , matrices
    , vector

executable minesweeper
  import:          common, exec
  main-is:         Main.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , base         >=4.7 && <5
    , minesweeper

test-suite minesweeper-test
  import:          common, test
  main-is:         Spec.hs
  hs-source-dirs:  test
  other-modules:
  autogen-modules:
  ghc-options:
  type:            exitcode-stdio-1.0
  build-depends:
    , base         >=4.7 && <5
    , hspec
    , minesweeper
